fixed id="selected" for homepage

--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -29,7 +29,7 @@
       <h1><a href="{{ site.baseurl }}">{{ site.title }}</a></h1>
       <nav>
         <ul>
-          <li><a href="{{ site.baseurl }}">Home</a></li>{% for node in site.pages %}{% if node.title %}<li><a href="{{ node.url }}"{% if page.url == node.url %} id="selected"{% endif %}>{{ node.title }}</a></li>{% endif %}{% endfor %}
+          <li><a href="{{ site.baseurl }}" {% if page.url == '/index.html' %} id="selected" {% endif %}>Home</a></li>{% for node in site.pages %}{% if node.title %}<li><a href="{{ node.url }}"{% if page.url == node.url %} id="selected"{% endif %}>{{ node.title }}</a></li>{% endif %}{% endfor %}
         </ul>
       </nav>
     </header>
