use https for loading google fonts.

--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -9,8 +9,8 @@
     <link rel="canonical" href="{{ page.url | prepend: site.url }}">
     <link rel="stylesheet" type="text/css" href="{{ "basic.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" type="text/css" href="{{ "highlight.css" | prepend: site.baseurl }}">
-    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,200italic,300italic,400italic,600italic,700italic' rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Gentium+Basic:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,200italic,300italic,400italic,600italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Gentium+Basic:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }} &raquo; Feed" href="{{ "feed.xml" | prepend: site.baseurl }}">
     {% if site.disqus_username  and page.id %}
     <script type="text/javascript">
