Push footer down to bottom

--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -59,7 +59,9 @@
       </div>
     </nav>
     <br/>
+    <main>
 {{ content }}
+    </main>
     <br />
     <footer class="page-footer light-blue darken-4">
       <div class="container">
