--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -75,7 +75,7 @@
           <div class="col l3 s12">
             <h5 class="white-text">Project links</h5>
             <ul>
-              <li><a class="white-text" href="https://github.com/cSploit/android">Github Project Page</a></li>
+              <li><u><a class="white-text" href="https://github.com/cSploit/android">Github Project Page</a></u></li>
             </ul>
           </div>
           <div class="col l3 s12">
