--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -24,11 +24,11 @@
     </script>
     {% endif %}
     
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
     <script src="{{ "init.js" | prepend: site.baseurl }}"></script>
     
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/js/materialize.min.js"></script>
     <link rel="stylesheet" href="{{ "css/main.css" | prepend: site.baseurl }}" >
     
     {% if site.isso_domain and page.id %}<script data-isso="http://{{ site.isso_domain }}" src="//{{ site.isso_domain }}/js/embed.min.js"></script>{% endif %}
@@ -76,7 +76,8 @@
           <div class="col l3 s12">
             <h5 class="white-text">Project links</h5>
             <ul>
-              <li><u><a class="white-text" href="https://github.com/cSploit/android">Github Project Page</a></u></li>
+              <li><u><a class="white-text" href="https://github.com/cSploit/android">Github Android Project Page</a></u></li>
+              <li><u><a class="white-text" href="https://github.com/cSploit/cSploit.github.io">Github Website Project Page</a></u></li>
             </ul>
           </div>
           <div class="col l3 s12">
