--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -83,8 +83,8 @@
           <div class="col l3 s12">
             <h5 class="white-text">About</h5>
             <ul>
-              <li class="white-text">Website made by <u><a class="white-text" href="http://www.dominiktv.net">DominikTV</a></u></li>
-              <li class="white-text">CSS-Framework by <u><a class="white-text" href="http://materializecss.com">Materialize</a></u></li>
+              <li class="white-text">Website made by <u><a class="white-text" target="_blank" href="http://www.dominiktv.net">DominikTV</a></u></li>
+              <li class="white-text">CSS-Framework by <u><a class="white-text" target="_blank" href="http://materializecss.com">Materialize</a></u></li>
             </ul>
           </div>
         </div>
