--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -69,7 +69,7 @@
         <div class="row">
           <div class="col l6 s12">
             <h5 class="white-text">About cSploit</h5>
-            <p class="grey-text text-lighten-4">The most complete and advanced IT security professional toolkit on Android. <a href="story">More...</a></p>
+            <p class="grey-text text-lighten-4">The most complete and advanced IT security professional toolkit on Android. <a href="/story">More...</a></p>
 
 
           </div>
