--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <link rel="icon" type="image/png" href="{{ "favicon.png" | prepend: site.baseurl }}" />
+    <meta name="theme-color" content="#3F51B5">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
     <meta charset="{{ site.encoding }}">
