New theme color and fixed footer

--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="icon" type="image/png" href="{{ "favicon.png" | prepend: site.baseurl }}" />
-    <meta name="theme-color" content="#3F51B5">
+    <meta name="theme-color" content="#01579B">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
     <meta charset="{{ site.encoding }}">
@@ -104,7 +104,7 @@
       </div>
       <div class="footer-copyright">
         <div class="container">
-        <p>Copyright &copy; {{ site.time | date: '%Y' }} cSploit</p>
+        <p>Copyright &copy; {{ site.time | date: '%Y' }} cSploit</p><br>
         </div>
       </div>
     </footer>
