Fix footer padding

--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -104,7 +104,7 @@
       </div>
       <div class="footer-copyright">
         <div class="container">
-        <p>Copyright &copy; {{ site.time | date: '%Y' }} cSploit</p><br>
+        Copyright &copy; {{ site.time | date: '%Y' }} cSploit<br>
         </div>
       </div>
     </footer>
