--- a/css/materialize.css
+++ b/css/materialize.css
@@ -2879,7 +2879,7 @@ footer.page-footer .footer-copyright {
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
-    padding: 10px 0px;
+    padding: 10px 0;
     color: rgba(255, 255, 255, 0.8);
     background-color: rgba(51, 51, 51, 0.08);
 }
@@ -4666,14 +4666,14 @@ small {
 }
 
 .card .card-action a:not(.btn):not(.btn-large):not(.btn-large):not(.btn-floating) {
-    color: #ffab40;
+    color: #FF9800;
     margin-right: 24px;
     transition: color .3s ease;
     text-transform: uppercase;
 }
 
 .card .card-action a:not(.btn):not(.btn-large):not(.btn-large):not(.btn-floating):hover {
-    color: #ffd8a6;
+    color: #FF6F00;
 }
 
 .card .card-reveal {
@@ -4703,7 +4703,7 @@ small {
 @media only screen and (max-width: 600px) {
     #toast-container {
         min-width: 100%;
-        bottom: 0%;
+        bottom: 0;
     }
 }
 
@@ -4832,7 +4832,7 @@ small {
 }
 
 .tabs .tab a {
-    color: rgba(238, 110, 115, 0.7);
+    color: #4CAF50;
     display: block;
     width: 100%;
     height: 100%;
@@ -4845,12 +4845,12 @@ small {
 
 .tabs .tab a:hover, .tabs .tab a.active {
     background-color: transparent;
-    color: #ee6e73;
+    color: #4CAF50;
 }
 
 .tabs .tab.disabled a,
 .tabs .tab.disabled a:hover {
-    color: rgba(238, 110, 115, 0.7);
+    color: #4CAF50;
     cursor: default;
 }
 
@@ -4858,7 +4858,7 @@ small {
     position: absolute;
     bottom: 0;
     height: 2px;
-    background-color: #f6b2b5;
+    background-color: #4CAF50;
     will-change: left, right;
 }
 
@@ -4906,8 +4906,8 @@ small {
     border-radius: 0 0 50% 50%;
     background-color: #323232;
     z-index: -1;
-    -webkit-transform-origin: 50% 0%;
-    transform-origin: 50% 0%;
+    -webkit-transform-origin: 50% 0;
+    transform-origin: 50% 0;
     visibility: hidden;
 }
 
@@ -5693,7 +5693,7 @@ button.btn-floating {
     left: 0;
     width: 100%;
     text-align: center;
-    padding: 0% 15%;
+    padding: 0 15%;
     height: 50px;
     z-index: 1000;
     -webkit-font-smoothing: antialiased;
@@ -6446,7 +6446,7 @@ form p:last-child {
     width: 20px;
     background-color: transparent;
     border: 2px solid #5a5a5a;
-    top: 0px;
+    top: 0;
     z-index: 0;
 }
 
@@ -7759,8 +7759,8 @@ input[type=range]:focus::-ms-fill-upper {
     perspective: 500px;
     -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
-    -webkit-transform-origin: 0% 50%;
-    transform-origin: 0% 50%;
+    -webkit-transform-origin: 0 50%;
+    transform-origin: 0 50%;
 }
 
 .carousel.carousel-slider {
