CSS fixes and improvements, Content enhancement
- Fixed broken links
- Removed comments from main css file
- Logged full website memory usage and performances fixes
- Updated some news files
- Removed pointless css lines

--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -42,6 +42,7 @@
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
     <script src="../js/init.js"></script>
     <script src="http://timeago.yarp.com/jquery.timeago.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:500&amp;subset=cyrillic-ext" rel="stylesheet">
 
     <script src="../js/materialize.js"></script>
     <link rel="stylesheet" href="../css/materialize.css">
@@ -86,7 +87,7 @@
         <div class="row">
           <div class="col l6 s12">
             <h5 class="white-text">About cSploit</h5>
-            <p class="grey-text text-lighten-4">The most complete and advanced IT security professional toolkit on Android. <a href="/story"><font color="#FFFFFF" style="text-decoration: none !important;">More...</font></a></p>
+            <p class="grey-text text-lighten-4">The most complete and advanced IT security professional toolkit and penetration testing suite. <a href="/story"><font color="#FFFFFF">More...</font></a></p>
 
           </div>
           <div class="col l3 s12">
