--- a/css/main.css
+++ b/css/main.css
@@ -2,11 +2,26 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto Condensed Regular', serif;
+}
+
+::selection {
+  background: #A5D6A7;
+}
+::-moz-selection {
+  background: #A5D6A7;
 }
 
 main {
   flex: 1 0 auto;
+}
+
+b {
+  font-family: "Roboto Condensed Bold";
+}
+
+n {
+  font-family: "Roboto Condensed Regular";
 }
 
 .dcard-panel {
@@ -302,6 +317,18 @@ main {
   }
 }
 
+.contacts-gradient {
+  background-image: linear-gradient(-159deg,#141E30 0%,#243B55 100%);
+  -webkit-clip-path: polygon(0 0,100% 0, 100% 100%, 0 90%);
+}
+
+@media (max-width: 601px) {
+  .contacts-gradient {
+    background-image: linear-gradient(-159deg,#141E30 0%,#243B55 100%);
+    -webkit-clip-path: polygon(0 0,100% 0, 100% 100%, 0 90%);
+  }
+}
+
 
 
 
@@ -428,4 +455,50 @@ main {
 .link-footer {
   color: #EEEEEE !important;
   text-decoration: none !important;
+}
+
+@font-face {
+  font-family: 'Roboto Condensed Regular';
+  font-style: normal;
+  font-weight: normal;
+  src: local('Roboto Condensed Regular'), url('../fonts/roboto/RobotoCondensed-Regular.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'Roboto Condensed Bold';
+  font-style: normal;
+  src: local('Roboto Condensed Bold'), url('../fonts/roboto/RobotoCondensed-Bold.woff') format('woff');
+}
+
+
+.opacity-1 {
+  opacity: 0.9;
+}
+
+.opacity-2 {
+  opacity: 0.8;
+}
+
+.opacity-3 {
+  opacity: 0.7;
+}
+
+.opacity-4 {
+  opacity: 0.6;
+}
+
+.opacity-5 {
+  opacity: 0.5;
+}
+
+.opacity-4 {
+  opacity: 0.6;
+}
+
+.opacity-3 {
+  opacity: 0.7;
+}
+
+.tagline {
+  font-family: "Roboto Condensed Regular", monospace !important;
 }
