Fixed footer color

--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -110,7 +110,7 @@
         </div>
       </div>
       <div class="footer-copyright">
-        <div class="container">
+        <div class="container white-font">
           <!-- build-full-date.js | build-year.js | {{ site.time | date: '%Y' }} -->
           Copyright &copy; <script src="../js/build-full-date.js"></script> cSploit
         </div>
