--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -40,8 +40,8 @@
     <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
     <script src="{{ "init.js" | prepend: site.baseurl }}"></script>
     
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css"></script>
     <link rel="stylesheet" href="{{ "css/main.css" | prepend: site.baseurl }}" >
     
     {% if site.isso_domain and page.id %}<script data-isso="http://{{ site.isso_domain }}" src="//{{ site.isso_domain }}/js/embed.min.js"></script>{% endif %}
@@ -96,7 +96,7 @@
           <div class="col l3 s12">
             <h5 class="white-text">About</h5>
             <ul>
-              <li class="white-text">Website made by <u><a class="white-text" target="_blank" href="http://www.dominiktv.net">DominikTV</a></u></li>
+              <li class="white-text">Website made by <u><a class="white-text" target="_blank" href="https://www.dominiktv.net">DominikTV</a></u></li>
               <li class="white-text">CSS-Framework by <u><a class="white-text" target="_blank" href="http://materializecss.com">Materialize</a></u></li>
             </ul>
           </div>
