--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -37,7 +37,7 @@
     </script>
     {% endif %}
     
-    <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="{{ "init.js" | prepend: site.baseurl }}"></script>
     
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.css">
